// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-table-stateless-wc should render with _label="Table with horizontal and vertical headers" _headerCells={"horizontal":[[{"key":"header1","label":"Header1","textAlign":"left"},{"key":"header2","label":"Header2","textAlign":"center"},{"key":"header3","label":"Header3","textAlign":"right"}]],"vertical":[[{"key":"row1","label":"Row 1","textAlign":"left"},{"key":"row2","label":"Row 2","textAlign":"center"},{"key":"row3","label":"Row 3","textAlign":"right"}]]} _data=[{"header1":"Cell 1.1","header2":"Cell 1.2","header3":"Cell 1.3"},{"header1":"Cell 2.1","header2":"Cell 2.2","header3":"Cell 2.3"},{"header1":"Cell 3.1","header2":"Cell 3.2","header3":"Cell 3.3"}] 1`] = `
<kol-table-stateless-wc class="kol-table-stateless-wc">
  <div class="kol-table">
    <table class="kol-table__container">
      <div aria-describedby="caption" class="kol-table__focus-element"></div>
      <caption class="kol-table__caption" id="caption">
        Table with horizontal and vertical headers
      </caption>
      <thead class="kol-table__head">
        <tr>
          <td aria-hidden="true" colspan="1" rowspan="1"></td>
          <th class="kol-table__header-cell kol-table__header-cell--align-left" data-sort="sort-undefined" scope="col">
            Header1
          </th>
          <th class="kol-table__header-cell kol-table__header-cell--align-center" data-sort="sort-undefined" scope="col">
            Header2
          </th>
          <th class="kol-table__header-cell kol-table__header-cell--align-right" data-sort="sort-undefined" scope="col">
            Header3
          </th>
        </tr>
        <tr aria-hidden="true" class="kol-table__head-spacer">
          <td colspan="4"></td>
        </tr>
      </thead>
      <tbody class="kol-table__body">
        <tr>
          <th class="kol-table__header-cell kol-table__header-cell--align-left" data-sort="sort-undefined" scope="row">
            Row 1
          </th>
          <td class="kol-table__body-cell kol-table__body-cell--align-left" style="text-align: left;">
            Cell 1.1
          </td>
          <td class="kol-table__body-cell kol-table__body-cell--align-center" style="text-align: center;">
            Cell 1.2
          </td>
          <td class="kol-table__body-cell kol-table__body-cell--align-right" style="text-align: right;">
            Cell 1.3
          </td>
        </tr>
        <tr>
          <th class="kol-table__header-cell kol-table__header-cell--align-center" data-sort="sort-undefined" scope="row">
            Row 2
          </th>
          <td class="kol-table__body-cell kol-table__body-cell--align-left" style="text-align: left;">
            Cell 2.1
          </td>
          <td class="kol-table__body-cell kol-table__body-cell--align-center" style="text-align: center;">
            Cell 2.2
          </td>
          <td class="kol-table__body-cell kol-table__body-cell--align-right" style="text-align: right;">
            Cell 2.3
          </td>
        </tr>
        <tr>
          <th class="kol-table__header-cell kol-table__header-cell--align-right" data-sort="sort-undefined" scope="row">
            Row 3
          </th>
          <td class="kol-table__body-cell kol-table__body-cell--align-left" style="text-align: left;">
            Cell 3.1
          </td>
          <td class="kol-table__body-cell kol-table__body-cell--align-center" style="text-align: center;">
            Cell 3.2
          </td>
          <td class="kol-table__body-cell kol-table__body-cell--align-right" style="text-align: right;">
            Cell 3.3
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</kol-table-stateless-wc>
`;

exports[`kol-table-stateless-wc should render with _label="Table with only horizontal headers" _headerCells={"horizontal":[[{"key":"header1","label":"Header 1","textAlign":"left"},{"key":"header2","label":"Header 2","textAlign":"center"}]],"vertical":[]} _data=[{"header1":"Cell 1.1","header2":"Cell 1.2"},{"header1":"Cell 2.1","header2":"Cell 2.2"}] 1`] = `
<kol-table-stateless-wc class="kol-table-stateless-wc">
  <div class="kol-table">
    <table class="kol-table__container">
      <div aria-describedby="caption" class="kol-table__focus-element"></div>
      <caption class="kol-table__caption" id="caption">
        Table with only horizontal headers
      </caption>
      <thead class="kol-table__head">
        <tr>
          <th class="kol-table__header-cell kol-table__header-cell--align-left" data-sort="sort-undefined" scope="col">
            Header 1
          </th>
          <th class="kol-table__header-cell kol-table__header-cell--align-center" data-sort="sort-undefined" scope="col">
            Header 2
          </th>
        </tr>
        <tr aria-hidden="true" class="kol-table__head-spacer">
          <td colspan="2"></td>
        </tr>
      </thead>
      <tbody class="kol-table__body">
        <tr>
          <td class="kol-table__body-cell kol-table__body-cell--align-left" style="text-align: left;">
            Cell 1.1
          </td>
          <td class="kol-table__body-cell kol-table__body-cell--align-center" style="text-align: center;">
            Cell 1.2
          </td>
        </tr>
        <tr>
          <td class="kol-table__body-cell kol-table__body-cell--align-left" style="text-align: left;">
            Cell 2.1
          </td>
          <td class="kol-table__body-cell kol-table__body-cell--align-center" style="text-align: center;">
            Cell 2.2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</kol-table-stateless-wc>
`;

exports[`kol-table-stateless-wc should render with _label="Table with two horizontal header rows" _headerCells={"horizontal":[[{"label":"Header 1","textAlign":"left"},{"label":"Header 2","textAlign":"center"}],[{"key":"header1","label":"Sub Header 1","textAlign":"left"},{"key":"header2","label":"Sub Header 2","textAlign":"center"}]],"vertical":[[{"key":"row-1","label":"Row 1","textAlign":"left"},{"key":"row-2","label":"Row 2","textAlign":"center"}]]} _data=[{"header1":"Cell 1.1","header2":"Cell 1.2"},{"header1":"Cell 2.1","header2":"Cell 2.2"}] 1`] = `
<kol-table-stateless-wc class="kol-table-stateless-wc">
  <div class="kol-table">
    <table class="kol-table__container">
      <div aria-describedby="caption" class="kol-table__focus-element"></div>
      <caption class="kol-table__caption" id="caption">
        Table with two horizontal header rows
      </caption>
      <thead class="kol-table__head">
        <tr>
          <td aria-hidden="true" colspan="1" rowspan="2"></td>
          <th class="kol-table__header-cell kol-table__header-cell--align-left" data-sort="sort-undefined" scope="col">
            Header 1
          </th>
          <th class="kol-table__header-cell kol-table__header-cell--align-center" data-sort="sort-undefined" scope="col">
            Header 2
          </th>
        </tr>
        <tr>
          <th class="kol-table__header-cell kol-table__header-cell--align-left" data-sort="sort-undefined" scope="col">
            Sub Header 1
          </th>
          <th class="kol-table__header-cell kol-table__header-cell--align-center" data-sort="sort-undefined" scope="col">
            Sub Header 2
          </th>
        </tr>
        <tr aria-hidden="true" class="kol-table__head-spacer">
          <td colspan="3"></td>
        </tr>
      </thead>
      <tbody class="kol-table__body">
        <tr>
          <th class="kol-table__header-cell kol-table__header-cell--align-left" data-sort="sort-undefined" scope="row">
            Row 1
          </th>
          <td class="kol-table__body-cell kol-table__body-cell--align-left" style="text-align: left;">
            Cell 1.1
          </td>
          <td class="kol-table__body-cell kol-table__body-cell--align-center" style="text-align: center;">
            Cell 1.2
          </td>
        </tr>
        <tr>
          <th class="kol-table__header-cell kol-table__header-cell--align-center" data-sort="sort-undefined" scope="row">
            Row 2
          </th>
          <td class="kol-table__body-cell kol-table__body-cell--align-left" style="text-align: left;">
            Cell 2.1
          </td>
          <td class="kol-table__body-cell kol-table__body-cell--align-center" style="text-align: center;">
            Cell 2.2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</kol-table-stateless-wc>
`;

exports[`kol-table-stateless-wc should render with _label="Table with two spanned horizontal and vertical headers" _headerCells={"horizontal":[[{"label":"H-Header","colSpan":2}],[{"key":"header1","label":"Sub H-Header 1"},{"key":"header2","label":"Sub H-Header 2"}]],"vertical":[[{"label":"V-Header","rowSpan":2}],[{"label":"Sub V-Header 1"},{"label":"Sub V-Header 2"}]]} _data=[{"header1":"Cell 1.1","header2":"Cell 1.2"},{"header1":"Cell 2.1","header2":"Cell 2.2"}] 1`] = `
<kol-table-stateless-wc class="kol-table-stateless-wc">
  <div class="kol-table">
    <table class="kol-table__container">
      <div aria-describedby="caption" class="kol-table__focus-element"></div>
      <caption class="kol-table__caption" id="caption">
        Table with two spanned horizontal and vertical headers
      </caption>
      <thead class="kol-table__head">
        <tr>
          <td aria-hidden="true" colspan="2" rowspan="2"></td>
          <th class="kol-table__header-cell" colspan="2" data-sort="sort-undefined" scope="colgroup">
            H-Header
          </th>
        </tr>
        <tr>
          <th class="kol-table__header-cell" data-sort="sort-undefined" scope="col">
            Sub H-Header 1
          </th>
          <th class="kol-table__header-cell" data-sort="sort-undefined" scope="col">
            Sub H-Header 2
          </th>
        </tr>
        <tr aria-hidden="true" class="kol-table__head-spacer">
          <td colspan="4"></td>
        </tr>
      </thead>
      <tbody class="kol-table__body">
        <tr>
          <th class="kol-table__header-cell" data-sort="sort-undefined" rowspan="2" scope="row">
            V-Header
          </th>
          <th class="kol-table__header-cell" data-sort="sort-undefined" scope="row">
            Sub V-Header 1
          </th>
          <td class="kol-table__body-cell">
            Cell 1.1
          </td>
          <td class="kol-table__body-cell">
            Cell 1.2
          </td>
        </tr>
        <tr>
          <th class="kol-table__header-cell" data-sort="sort-undefined" scope="row">
            Sub V-Header 2
          </th>
          <td class="kol-table__body-cell">
            Cell 2.1
          </td>
          <td class="kol-table__body-cell">
            Cell 2.2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</kol-table-stateless-wc>
`;
